--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \input{Chapters/Wstep}
 \input{Chapters/Stan_wiedzy}
 \input{Chapters/Dokumenty_elektroniczne}
+\input{Chapters/Backend}
 \input{Chapters/Jeszcze_jeden_rozdzial}
 \input{Chapters/Podsumowanie}
 
