--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[10pt, twoside, a4paper,openany]{book}
 \usepackage{macra_xelatex}
-
+\usepackage{graphicx}
+\usepackage{float}
 
 \begin{document}
 % strony generowane z moja.pg
@@ -20,6 +21,7 @@
 % rozdziały i podrozdziały numerowane
 \input{Chapters/Wstep}
 \input{Chapters/Stan_wiedzy}
+\input{Chapters/Wykorzystane_algorytmy_i_ich_charakterystyka}
 \input{Chapters/Dokumenty_elektroniczne}
 \input{Chapters/Backend}
 \input{Chapters/Jeszcze_jeden_rozdzial}
