--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \input{Chapters/Wstep}
 \input{Chapters/Stan_wiedzy}
 \input{Chapters/Wykorzystane_algorytmy_i_ich_charakterystyka}
-\input{Chapters/Dokumenty_elektroniczne}
+\input{Chapters/Frontend}
 \input{Chapters/Backend}
 \input{Chapters/Podsumowanie}
 
@@ -34,8 +34,6 @@
 % wykazy 
 \listoffigures
 \listoftables
-\listofequations
-\listoflistings
 
 % dodatki
 \appendix
