--- a/main.tex
+++ b/main.tex
@@ -33,9 +33,7 @@
 
 % wykazy 
 \listoffigures
-\listoftables
-
+\lstlistoflistings
 % dodatki
-\appendix
-\input{Chapters/DodatekA}  
+
 \end{document}
